--- a/COMPANHIAS/tap.html
+++ b/COMPANHIAS/tap.html
@@ -22,8 +22,8 @@
         <table class="table-cont">
             <tr>
                 <td>
-                    <a href="https://www.flytap.com/pt-pt/" target="_blank"> <img width="40%"
-                            src="../img/companhias/logos/logo-tap-air-portugal1.ico" alt="">
+                    <a href="https://www.flytap.com/pt-pt/" target="_blank">
+                        <img class="imagem1" src="../img/companhias/logos/logo-tap-air-portugal1.ico" alt="">
                     </a>
                 </td>
                 <td id="menu">
@@ -98,8 +98,8 @@
                 2500 voos por semana, com uma frota de 100 aeronaves: 78 aeronaves Airbus e 22 aeronaves, ao serviço da
                 TAP Express.
             </p>
-            <iframe class="mapa" src="https://www.google.com/maps/d/u/0/embed?mid=1n2OMPkqIRhHSlXmTt3RsW0eVU-ZK6WYv"
-                ></iframe>
+            <iframe class="mapa"
+                src="https://www.google.com/maps/d/u/0/embed?mid=1n2OMPkqIRhHSlXmTt3RsW0eVU-ZK6WYv"></iframe>
             <br>
             <br>
         </a>
