--- a/COMPANHIAS/white.html
+++ b/COMPANHIAS/white.html
@@ -22,7 +22,7 @@
             <tr>
                 <td>
                     <a href="https://www.flywhite.com/" target="_blank">
-                        <img width="50%" src="../img/companhias/logos/whiteairways900.png" alt="">
+                        <img class="imagemgrande" src="../img/companhias/logos/whiteairways900.png" alt="">
                     </a>
                 </td>
                 <td id="menu">
