--- a/COMPANHIAS/euro.html
+++ b/COMPANHIAS/euro.html
@@ -21,7 +21,8 @@
             <tr>
                 <td>
                     <a href="https://www.euroatlantic.pt/" target="_blank">
-                        <img src="../img/companhias/logos/EuroAtlantic_Airways_Logo.svg.png" alt="" width="40%">
+                        <img class="imagem1" src="../img/companhias/logos/EuroAtlantic_Airways_Logo.svg.png"
+                            alt="">
                     </a>
                 </td>
                 <td id="menu">
