--- a/COMPANHIAS/euro.html
+++ b/COMPANHIAS/euro.html
@@ -17,12 +17,11 @@
     </a>
     </main>
     <main class="inicial">
-        <table>
+        <table class="table-cont">
             <tr>
                 <td>
                     <a href="https://www.euroatlantic.pt/" target="_blank">
-                        <img class="imagem1" src="../img/companhias/logos/EuroAtlantic_Airways_Logo.svg.png"
-                            alt="">
+                        <img class="imagem2" src="../img/companhias/logos/EuroAtlantic_Airways_Logo.svg.png" alt="">
                     </a>
                 </td>
                 <td id="menu">
