--- a/COMPANHIAS/white.html
+++ b/COMPANHIAS/white.html
@@ -93,37 +93,32 @@
             <p>Esta companhia aérea privada portuguesa, tem em sua frota cerca de 16 aeronaves, das quais nove estão ao
                 serviço da TAP e duas ao serviço da <abbr
                     title="empresa aéria sediada em Malabo, Guiné Equatorial">CEIBA</abbr>, no ano de 2019.</p>
-            <table class="tabelaWhite">
-                <thead>
-                    <th>Frota da White Airlines</th>
-                </thead>
-                <tbody>
+            <table class="tabelacont">
                     <tr>
-                        <td>
+                        <td class="td-cont">
                             <p>A White Airways tem dois modelos distintos da Airbus, tem duas aeronaves A319 CJ e três
                                 A320-200.</p>
                         </td>
                         <td>
-                            <img src="../img/companhias/frota/Captura de ecrã 2021-05-09 182642.png" alt="Avião white">
+                            <img class="imagemfrota" src="../img/companhias/frota/Captura de ecrã 2021-05-09 182642.png" alt="Avião white">
                         </td>
                     </tr>
                     <br>
                     <tr>
                         <td>
-                            <img src="../img/companhias/frota/Captura de ecrã 2021-05-09 183334.png" alt="Avião white">
+                            <img class="imagemfrota" src="../img/companhias/frota/Captura de ecrã 2021-05-09 183334.png" alt="Avião white">
                         </td>
-                        <td>Como apenas um modelo ATR, esta companhia tem 9 aviões ATR-72-600, todos eles a operar na
+                        <td class="td-cont">Como apenas um modelo ATR, esta companhia tem 9 aviões ATR-72-600, todos eles a operar na
                             TAP Express</td>
                     </tr>
                     <br>
                     <tr>
-                        <td>Da Boeing, tem dois modelos; o Boing 737-800 e o Boing 777-200LR, ambos com 1 aeronave,
+                        <td class="td-cont">Da Boeing, tem dois modelos; o Boing 737-800 e o Boing 777-200LR, ambos com 1 aeronave,
                             ambos ao serviço da CEIBA.</td>
                         <td>
-                            <img src="../img/companhias/frota/Captura de ecrã 2021-05-09 183913.png" alt="Avião white">
+                            <img class="imagemfrota" src="../img/companhias/frota/Captura de ecrã 2021-05-09 183913.png" alt="Avião white">
                         </td>
                     </tr>
-                </tbody>
             </table>
             <br>
         </a>
