--- a/COMPANHIAS/orbest.html
+++ b/COMPANHIAS/orbest.html
@@ -41,6 +41,25 @@
         </table>
     </main>
     <br>
+    <main>
+        <table id="introducao">
+            <tr>
+                <td>
+                    <p>A Orbest, agora denominada iberojet, é uma companhia aérea portuguesa e subsidiária da companhia
+                        aérea espanhola Evelop Airlines, tem a sua sede no aeroporto de lisboa, opera voos regulares e
+                        charter em opções de curtos e longo curso, de Portugal para o mundo. Fundada em 2007, a empresa
+                        torna-se propriedade do Grupo Orizonia (grupo turístico espanhol fundado em 2006. Terceira maior
+                        operadora de turismo em Espanha), mesmo acaba em colapso, mudando assim para o grupo Barceló.
+                    </p>
+                </td>
+                <td>
+                    <picture>
+                        <img src="../img/companhias/apresentacao/orbest.jpg" alt="Imagem do site site oficial">
+                    </picture>
+                </td>
+            </tr>
+        </table>
+    </main>
 
 </body>
 
