--- a/COMPANHIAS/euro.html
+++ b/COMPANHIAS/euro.html
@@ -45,11 +45,6 @@
         <table id="introducao">
             <tr>
                 <td>
-                    <picture>
-                        <img src="../img/companhias/apresentacao/DSC00693.JPG" type="jpg">
-                    </picture>
-                </td>
-                <td>
                     <p>
                         A euroAtlantic Airways é uma companhia aérea especializada em leasing*, charter e carga aérea
                         com
@@ -59,6 +54,11 @@
                     </p>
 
                     <p>É também proprietária de 38% da companhia aérea de São Tomé e Príncipe.</p>
+                </td>
+                <td>
+                    <picture>
+                        <img src="../img/companhias/apresentacao/DSC00693.JPG" type="jpg">
+                    </picture>
                 </td>
             </tr>
         </table>
@@ -113,7 +113,6 @@
                     </td>
                 </tr>
 
-
                 <tr>
                     <td class="td-cont">
                         <img class="imagemfrota" src="../img/companhias/frota/Boeing 767-300ER.png"
@@ -138,7 +137,7 @@
                         <p>Os aviões CS-TRK, TKS, TKT tem 16 acentos para a classe business e 188 acentos para a classe
                             económica. </p>
                         <p>Já os CS-TST, TSU, TSV tem 265 para a classe económica.</p>
-                        <p>Atingem a velocidade máxima de 11,306km, e a sua velocidade de cruzeiro é de 851km/h</p>
+                        <p>Atingem a velocidade máxima de 11,306km, e a sua velocidade de cruzeiro é de 851km/h.</p>
                     </td>
                     <td><img class="imagemfrota" src="../img/companhias/frota/Boeing 777-200ER.png"
                             alt="Imagem oficial do site" width="80%"></td>
