--- a/COMPANHIAS/white.html
+++ b/COMPANHIAS/white.html
@@ -46,11 +46,6 @@
         <table id="introducao">
             <tr>
                 <td>
-                    <picture>
-                        <img src="../img/companhias/apresentacao/OMNI_AIRBUS320_30_WEB.jpg" type="jpg" width="74%">
-                    </picture>
-                </td>
-                <td>
                     <p> A White Airways é uma companhia privada portuguesa, administrada pelo grupo <abbr
                             title="maior grupo privado português de aviação"><em>Omni Aviation SGPS</em></abbr>,
                         dedica-se á aviação <abbr
@@ -62,6 +57,11 @@
                     <p>É uma companhia aérea que opera 8 aviões ATR, nomeadamente ATR-72, desde 27 de março de 2016 ao
                         serviço da TAP Express, nas rotas de curta distância, nomeadamente a Ponte Aérea Lisboa-Porto.
                     </p>
+                </td>
+                <td>
+                    <picture>
+                        <img src="../img/companhias/apresentacao/OMNI_AIRBUS320_30_WEB.jpg" type="jpg" width="74%">
+                    </picture>
                 </td>
             </tr>
         </table>
@@ -94,31 +94,36 @@
                 serviço da TAP e duas ao serviço da <abbr
                     title="empresa aéria sediada em Malabo, Guiné Equatorial">CEIBA</abbr>, no ano de 2019.</p>
             <table class="tabelacont">
-                    <tr>
-                        <td class="td-cont">
-                            <p>A White Airways tem dois modelos distintos da Airbus, tem duas aeronaves A319 CJ e três
-                                A320-200.</p>
-                        </td>
-                        <td>
-                            <img class="imagemfrota" src="../img/companhias/frota/Captura de ecrã 2021-05-09 182642.png" alt="Avião white">
-                        </td>
-                    </tr>
-                    <br>
-                    <tr>
-                        <td>
-                            <img class="imagemfrota" src="../img/companhias/frota/Captura de ecrã 2021-05-09 183334.png" alt="Avião white">
-                        </td>
-                        <td class="td-cont">Como apenas um modelo ATR, esta companhia tem 9 aviões ATR-72-600, todos eles a operar na
-                            TAP Express</td>
-                    </tr>
-                    <br>
-                    <tr>
-                        <td class="td-cont">Da Boeing, tem dois modelos; o Boing 737-800 e o Boing 777-200LR, ambos com 1 aeronave,
-                            ambos ao serviço da CEIBA.</td>
-                        <td>
-                            <img class="imagemfrota" src="../img/companhias/frota/Captura de ecrã 2021-05-09 183913.png" alt="Avião white">
-                        </td>
-                    </tr>
+                <tr>
+                    <td class="td-cont">
+                        <p>A White Airways tem dois modelos distintos da Airbus, tem duas aeronaves A319 CJ e três
+                            A320-200.</p>
+                    </td>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/Captura de ecrã 2021-05-09 182642.png"
+                            alt="Avião white">
+                    </td>
+                </tr>
+                <br>
+                <tr>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/Captura de ecrã 2021-05-09 183334.png"
+                            alt="Avião white">
+                    </td>
+                    <td class="td-cont">Como apenas um modelo ATR, esta companhia tem 9 aviões ATR-72-600, todos eles a
+                        operar na
+                        TAP Express</td>
+                </tr>
+                <br>
+                <tr>
+                    <td class="td-cont">Da Boeing, tem dois modelos; o Boing 737-800 e o Boing 777-200LR, ambos com 1
+                        aeronave,
+                        ambos ao serviço da CEIBA.</td>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/Captura de ecrã 2021-05-09 183913.png"
+                            alt="Avião white">
+                    </td>
+                </tr>
             </table>
             <br>
         </a>
