--- a/COMPANHIAS/orbest.html
+++ b/COMPANHIAS/orbest.html
@@ -46,10 +46,13 @@
             <tr>
                 <td>
                     <p>A Orbest, agora denominada iberojet, é uma companhia aérea portuguesa e subsidiária da companhia
-                        aérea espanhola Evelop Airlines, tem a sua sede no aeroporto de lisboa, opera voos regulares e
+                        aérea espanhola <strong>Evelop Airlines</strong>, tem a sua sede no aeroporto de lisboa, opera
+                        voos regulares e
                         charter em opções de curtos e longo curso, de Portugal para o mundo. Fundada em 2007, a empresa
-                        torna-se propriedade do Grupo Orizonia (grupo turístico espanhol fundado em 2006. Terceira maior
-                        operadora de turismo em Espanha), mesmo acaba em colapso, mudando assim para o grupo Barceló.
+                        torna-se propriedade do <strong>Grupo Orizonia</strong> (grupo turístico espanhol fundado em
+                        2006. Terceira maior
+                        operadora de turismo em Espanha), a mesma acaba em colapso, mudando para o grupo
+                        <strong>Barceló</strong>.
                     </p>
                 </td>
                 <td>
@@ -59,6 +62,21 @@
                 </td>
             </tr>
         </table>
+    </main>
+    <br>
+    <main>
+        <a name="historia">
+            <h2>Historia</h2>
+            <p>A empresa foi criada em 2007 pelo Grupo Orizonia.</p>
+            <p>Dá início ás suas operações apenas com o Airbus A330-200, registado com CS-TRA, esta permanece na
+                companhia até ao ano de 2010, quando o grupo anuncia um <em>upgrate</em> para um novo e maior Airbus
+                A330-300.</p>
+            <p>Após o declínio da Orizonia Corporation, a Orbest foi adquirida pelo Grupo Barceló (subsidiaria e empresa
+                de turismo, uma das mais importantes do mundo.). Esse mesmo grupo cria também uma nova companhia aérea,
+                a Evelop Airlines, para operações em Espanha, a mesma recebe aviões da Orbest, assim todas as aeronaves
+                são operadas por ambas as companhias.</p>
+            <br>
+        </a>
     </main>
 
 </body>
