--- a/COMPANHIAS/orbest.html
+++ b/COMPANHIAS/orbest.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orbest</title>
+    <title>Iberojet</title>
     <link rel="stylesheet" href="../COMPANHIAS/css/style.css">
 </head>
 
@@ -20,8 +20,8 @@
         <table>
             <tr>
                 <td>
-                    <a href="https://www.euroatlantic.pt/" target="_blank">
-                        <img src="../img/companhias/logos/EuroAtlantic_Airways_Logo.svg.png" alt="" width="40%">
+                    <a href="https://www.iberojet.com/pt/" target="_blank">
+                        <img src="../img/companhias/logos/Iberojet.png" alt="" width="40%">
                     </a>
                 </td>
                 <td id="menu">
@@ -45,7 +45,7 @@
         <table id="introducao">
             <tr>
                 <td>
-                    <p>A Orbest, agora denominada iberojet, é uma companhia aérea portuguesa e subsidiária da companhia
+                    <p>A Orbest, agora denominada Iberojet, é uma companhia aérea portuguesa e subsidiária da companhia
                         aérea espanhola <strong>Evelop Airlines</strong>, tem a sua sede no aeroporto de lisboa, opera
                         voos regulares e
                         charter em opções de curtos e longo curso, de Portugal para o mundo. Fundada em 2007, a empresa
@@ -75,6 +75,20 @@
                 de turismo, uma das mais importantes do mundo.). Esse mesmo grupo cria também uma nova companhia aérea,
                 a Evelop Airlines, para operações em Espanha, a mesma recebe aviões da Orbest, assim todas as aeronaves
                 são operadas por ambas as companhias.</p>
+            <br>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/am4n7LCG1oo"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </a>
+    </main>
+    <br>
+    <main>
+        <a name="destinos">
+            <h2>Destinnos</h2>
+            <img width="100%" src="../img/companhias/destinos/iberojet.png" alt="Imagem do site oficial">
+            <p class="sem_informacao">Para mais informações aceda <a
+                    href="https://www.iberojet.com/pt/nossos-destinos">aqui</a> .</p>
             <br>
         </a>
     </main>
