--- a/COMPANHIAS/orbest.html
+++ b/COMPANHIAS/orbest.html
@@ -80,19 +80,68 @@
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+            <br>
+            <br>
         </a>
     </main>
     <br>
     <main>
         <a name="destinos">
-            <h2>Destinnos</h2>
+            <h2>Destinos</h2>
             <img width="100%" src="../img/companhias/destinos/iberojet.png" alt="Imagem do site oficial">
-            <p class="sem_informacao">Para mais informações aceda <a
-                    href="https://www.iberojet.com/pt/nossos-destinos">aqui</a> .</p>
+            <p class="sem_informacao">Para mais informações aceda <a href="https://www.iberojet.com/pt/nossos-destinos"
+                    target="_blank">aqui</a> .</p>
             <br>
         </a>
     </main>
-
+    <br>
+    <main>
+        <a name="frota">
+            <h2>Frota</h2>
+            <table class="tabelacont">
+                <tr>
+                    <td class="td-cont">
+                        <h1>A350-900</h1>
+                        <p>Este avião tem a capacidade de transportar até 432 passageiros.</p>
+                        <p>Tem uma velocidade de descolagem de 280 Km/h, 240 Km/h de aterragem e a sua velocidade máxima
+                            pode ir até os 15.000 Km.</p>
+                    </td>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/A350-900IBERROJET.jpg"
+                            alt="Esta imagem foi retirada do site oficial">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/A320-214IBERROJET.jpg"
+                            alt="Esta imagem foi retirada do site oficial">
+                    </td>
+                    <td class="td-cont">
+                        <h1>Airbus A320-214</h1>
+                        <p>O Airbus A320-214 tem a capacidade de 180 passageiros.</p>
+                        <p>A sua velocidade de descolagem é de 280 Km/h. enquanto a de aterragem é de 240 Km/h. Pode
+                            alcançar os 5.500 Km.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-cont">
+                        <h1>Airbus A330-300</h1>
+                        <p>O ultimo modelo da frota é o Airbus A330-300, transporta até 388 passageiros.</p>
+                        <p>Tem como velocidade de descolagem 280 Km/h, Velocidade de aterragem de 240 Km/h, pode
+                            alcançar os 10.000 Km.</p>
+                    </td>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/A330-300IBERROJET.jpg"
+                            alt="Esta imagem foi retirada do site oficial">
+                    </td>
+                </tr>
+            </table>
+            <p class="sem_informacao">Para saber mais caracteristicas da frota da Iberojet clique <a
+                    href="https://www.iberojet.com/pt/nossa-frota" target="_blank">aqui</a> </p>
+        </a>
+        <br>
+    </main>
+    <br>
 </body>
 
 </html>
