--- a/COMPANHIAS/euro.html
+++ b/COMPANHIAS/euro.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EuroAtlantic</title>
     <link rel="stylesheet" href="../COMPANHIAS/css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 
 <body>
@@ -46,7 +50,9 @@
             <tr>
                 <td>
                     <p>
-                        A euroAtlantic Airways é uma companhia aérea especializada em leasing*, charter e carga aérea
+                        A euroAtlantic Airways é uma companhia aérea especializada em <abbr
+                            title="é uma modalidade de financiamento onde o locador adquire um bem e cede o seu uso temporário">leasing</abbr>,
+                        charter e carga aérea
                         com
                         a sede em Sintra, Portugal e baseada no Aeroporto de Lisboa. Fundada a 12 de agosto de 1993
                         pelos Senhor Tomaz Metello, iniciando-se com o nome de Air Zarco. E foi só a 17 de maio de 200
