--- a/COMPANHIAS/euro.html
+++ b/COMPANHIAS/euro.html
@@ -46,28 +46,27 @@
     </main>
     <br>
     <main>
-        <table id="introducao">
-            <tr>
-                <td>
-                    <p>
-                        A euroAtlantic Airways é uma companhia aérea especializada em <abbr
-                            title="é uma modalidade de financiamento onde o locador adquire um bem e cede o seu uso temporário">leasing</abbr>,
-                        charter e carga aérea
-                        com
-                        a sede em Sintra, Portugal e baseada no Aeroporto de Lisboa. Fundada a 12 de agosto de 1993
-                        pelos Senhor Tomaz Metello, iniciando-se com o nome de Air Zarco. E foi só a 17 de maio de 200
-                        que veio a ter o nome atual, EuroAtlantic Airways.
-                    </p>
+        <br>
+        <div class="row" id="introducao">
+            <div class="col-md-6">
+                <p>
+                    A euroAtlantic Airways é uma companhia aérea especializada em <abbr
+                        title="é uma modalidade de financiamento onde o locador adquire um bem e cede o seu uso temporário">leasing</abbr>,
+                    charter e carga aérea
+                    com
+                    a sede em Sintra, Portugal e baseada no Aeroporto de Lisboa. Fundada a 12 de agosto de 1993
+                    pelos Senhor Tomaz Metello, iniciando-se com o nome de Air Zarco. E foi só a 17 de maio de 200
+                    que veio a ter o nome atual, EuroAtlantic Airways.
+                </p>
 
-                    <p>É também proprietária de 38% da companhia aérea de São Tomé e Príncipe.</p>
-                </td>
-                <td>
-                    <picture>
-                        <img src="../img/companhias/apresentacao/DSC00693.JPG" type="jpg">
-                    </picture>
-                </td>
-            </tr>
-        </table>
+                <p>É também proprietária de 38% da companhia aérea de São Tomé e Príncipe.</p>
+            </div>
+            <div class="col-md-6">
+                <picture>
+                    <img src="../img/companhias/apresentacao/DSC00693.JPG" type="jpg">
+                </picture>
+            </div>
+        </div>
     </main>
     <br>
     <main>
@@ -103,6 +102,10 @@
             <h2>Frota</h2>
             <p>A euroAtlantic Airways tem três modelos distintos de aeronaves na sua frota, o Boeing 737-800NG, o Boeing
                 767-300ER e o Boeing 777-200ER.</p>
+
+
+
+                
             <table class="tabelacont">
                 <tr>
                     <td class="td-cont">
