--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="img/logo/Untitled-1_teste.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ylj8mcl.css">
 
 </head>
 
@@ -22,7 +23,13 @@
                     <h1>You can fly,</h1>
                     <h1>Portugal no ar</h1>
                 </td>
-                <td>
+            </tr>
+            <tr>
+                <td width="48%">
+                    <p>Conheça o que portugal tem a oferecer nos céus. Todas as companhias ao
+                        seu alcance. </p>
+                </td>
+                <td rowspan="2">
                     <img src="img/logo/Untitled-1.png" alt="" width="25%">
                 </td>
             </tr>
