--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
                     <h1>You can fly,</h1>
                     <h1>Portugal no ar</h1>
                 </td>
+                <td rowspan="2">
+                    <img src="img/logo/Untitled-1.png" alt="Logotipo original do site" width="25%" align="middle">
+                </td>
             </tr>
             <tr>
                 <td width="48%">
                     <p>Conheça o que portugal tem a oferecer nos céus. Todas as companhias ao
                         seu alcance. </p>
                 </td>
-                <td rowspan="2">
-                    <img src="img/logo/Untitled-1.png" alt="" width="25%">
-                </td>
+                <td></td>
             </tr>
         </table>
     </div>
@@ -102,8 +103,8 @@
                 <td data-aos="fade-right">
                     <h1>Sobre</h1>
                     <p>Este site tem como objetivo mostrar aos portugueses e ao mundo que temos bastante por onde
-                        escolher quando se quer viajar e que temos otimas companhias dispostas a assegurar a nossa
-                        segurança.</p>
+                        escolher quando se quer viajar e que somos orgulhosos por ter ótimas companhias dispostas a
+                        assegurar a nossa segurança.</p>
                 </td>
             </tr>
         </table>
