--- a/COMPANHIAS/euro.html
+++ b/COMPANHIAS/euro.html
@@ -7,10 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EuroAtlantic</title>
     <link rel="stylesheet" href="../COMPANHIAS/css/style.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 
 <body>
@@ -46,34 +42,36 @@
     </main>
     <br>
     <main>
-        <br>
-        <div class="row" id="introducao">
-            <div class="col-md-6">
-                <p>
-                    A euroAtlantic Airways é uma companhia aérea especializada em <abbr
-                        title="é uma modalidade de financiamento onde o locador adquire um bem e cede o seu uso temporário">leasing</abbr>,
-                    charter e carga aérea
-                    com
-                    a sede em Sintra, Portugal e baseada no Aeroporto de Lisboa. Fundada a 12 de agosto de 1993
-                    pelos Senhor Tomaz Metello, iniciando-se com o nome de Air Zarco. E foi só a 17 de maio de 200
-                    que veio a ter o nome atual, EuroAtlantic Airways.
-                </p>
+        <table id="introducao">
+            <tr>
+                <td>
+                    <p>
+                        A euroAtlantic Airways é uma companhia aérea especializada em <abbr
+                            title="é uma modalidade de financiamento onde o locador adquire um bem e cede o seu uso temporário">leasing</abbr>,
+                        charter e carga aérea
+                        com
+                        a sede em Sintra, Portugal e baseada no Aeroporto de Lisboa. Fundada a 12 de agosto de 1993
+                        pelos Senhor Tomaz Metello, iniciando-se com o nome de Air Zarco. E foi só a 17 de maio de 200
+                        que veio a ter o nome atual, EuroAtlantic Airways.
+                    </p>
 
-                <p>É também proprietária de 38% da companhia aérea de São Tomé e Príncipe.</p>
-            </div>
-            <div class="col-md-6">
-                <picture>
-                    <img src="../img/companhias/apresentacao/DSC00693.JPG" type="jpg">
-                </picture>
-            </div>
-        </div>
+                    <p>É também proprietária de 38% da companhia aérea de São Tomé e Príncipe.</p>
+                </td>
+                <td>
+                    <picture>
+                        <img src="../img/companhias/apresentacao/DSC00693.JPG" type="jpg">
+                    </picture>
+                </td>
+            </tr>
+        </table>
     </main>
     <br>
     <main>
         <a name="historia">
             <h2>Historia</h2>
             <p>A 25 de Agosto de 1993 nasce a Air Zarco, comercialmente designada por Air Madeira, suportada pela Iti -
-                Sociedade de Investimentos Turísticos na Ilha da Madeira S.A*1 da Ilha da Madeira.</p>
+                Sociedade de Investimentos Turísticos na Ilha da Madeira <abbr title="Sociedade anónima">S.A</abbr> da
+                Ilha da Madeira.</p>
             <p>Começam a explorar rotas esquecidas, como as Caraíbas e o Nordeste do Brasil, com um Lockheed L-1011
                 Tristar, entretanto adquirido pela TAP em 1997.</p>
             <p>Em 1998 destaca-se a realização da viagem presidencial a Macau com o presidente Jorge Sampaio, Iniciam as
@@ -103,9 +101,6 @@
             <p>A euroAtlantic Airways tem três modelos distintos de aeronaves na sua frota, o Boeing 737-800NG, o Boeing
                 767-300ER e o Boeing 777-200ER.</p>
 
-
-
-                
             <table class="tabelacont">
                 <tr>
                     <td class="td-cont">
