--- a/COMPANHIAS/sevenair.html
+++ b/COMPANHIAS/sevenair.html
@@ -90,6 +90,23 @@
             <br>
         </a>
     </main>
+    <main>
+        <a name="frota">
+            <h2>Frota</h2>
+            <p>A Sevenair conta com 7 modelos de aeronaves diversas na sua frota</p>
+            <table class="tabelacont">
+                <tr>
+                    <td class="td-cont">
+                        <h1>Dornier 228</h1>
+                        <p>Este modelo conta com um total de 19 lugares podendo chegar aos <abbr title="427.81 Km/h">231
+                                kts</abbr>. Tendo 3 aeronaves no total.</p>
+                    </td>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/sevenair-do228-airline.webp"
+                            alt="Dornier 228" width="50%">
+                    </td>
+        </a>
+    </main>
 
 </body>
 
