--- a/COMPANHIAS/white.html
+++ b/COMPANHIAS/white.html
@@ -96,6 +96,7 @@
             <table class="tabelacont">
                 <tr>
                     <td class="td-cont">
+                        <h1>Modelos Airbus</h1>
                         <p>A White Airways tem dois modelos distintos da Airbus, tem duas aeronaves A319 CJ e três
                             A320-200.</p>
                     </td>
@@ -110,9 +111,13 @@
                         <img class="imagemfrota" src="../img/companhias/frota/Captura de ecrã 2021-05-09 183334.png"
                             alt="Avião white">
                     </td>
-                    <td class="td-cont">Como apenas um modelo ATR, esta companhia tem 9 aviões ATR-72-600, todos eles a
-                        operar na
-                        TAP Express</td>
+                    <td class="td-cont">
+                        <h1>Modelos ATR</h1>
+                        <p> Como apenas um modelo ATR, esta companhia tem 9 aviões ATR-72-600, todos eles a
+                            operar na
+                            TAP Express
+                        </p>
+                    </td>
                 </tr>
                 <br>
                 <tr>
