--- a/COMPANHIAS/sevenair.html
+++ b/COMPANHIAS/sevenair.html
@@ -103,8 +103,30 @@
                     </td>
                     <td>
                         <img class="imagemfrota" src="../img/companhias/frota/sevenair-do228-airline.webp"
-                            alt="Dornier 228" width="50%">
+                            alt="Dornier 228">
                     </td>
+                <tr>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/jetstream_32_red.webp" alt="Dornier 228">
+                    </td>
+                    <td class="td-cont">
+                        <h1>BAe Jetstream 32</h1>
+                        <p>Este modelo tem cerca de 19 lugares, podendo atingir uma velocidade de <abbr
+                                title="487.08 Km/h">263Kts</abbr>. A Sevenair conta com 2 aeronaves dete modelo.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-cont">
+                        <h1>Casa Aviocar C212</h1>
+                        <p>Este modelo conta com 20 lugares, podendo atingir uma velocidade máxima de <abbr
+                                title="385.22 Km/h">208Kts</abbr>. Este é o segundo modelos em mais abundância desta
+                            companhia, contando com 5 aeronaves.</p>
+                    </td>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/Sevenair_Casa_Aviocar_C212_site_novo.jpg"
+                            alt="Dornier 228">
+                    </td>
+                </tr>
         </a>
     </main>
 
