--- a/COMPANHIAS/sevenair.html
+++ b/COMPANHIAS/sevenair.html
@@ -102,7 +102,6 @@
     <main>
         <a name="frota">
             <h2>Frota</h2>
-            <p>A Sevenair conta com 7 modelos de aeronaves diversas na sua frota</p>
             <table class="tabelacont">
                 <tr>
                     <td class="td-cont">
@@ -111,12 +110,12 @@
                                 kts</abbr>. Tendo 3 aeronaves no total.</p>
                     </td>
                     <td>
-                        <img class="imagemfrota" src="../img/companhias/frota/sevenair-do228-airline.webp"
+                        <img class="imagemFrotaSevenair" src="../img/companhias/frota/sevenair-do228-airline.webp"
                             alt="Dornier 228BAe (Imagem do site oficial)">
                     </td>
                 <tr>
                     <td>
-                        <img class="imagemfrota" src="../img/companhias/frota/jetstream_32_red.webp"
+                        <img class="imagemFrotaSevenair" src="../img/companhias/frota/jetstream_32_red.webp"
                             alt="BAe Jetstream 32 (Imagem do site oficial)">
                     </td>
                     <td class="td-cont">
@@ -133,13 +132,14 @@
                             companhia, contando com 5 aeronaves.</p>
                     </td>
                     <td>
-                        <img class="imagemfrota" src="../img/companhias/frota/Sevenair_Casa_Aviocar_C212_site_novo.jpg"
+                        <img class="imagemFrotaSevenair"
+                            src="../img/companhias/frota/Sevenair_Casa_Aviocar_C212_site_novo.jpg"
                             alt="Casa Aviocar C212 (Imagem do site oficial)">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img class="imagemfrota" src="../img/companhias/frota/skydiving-algarve-pilatus.webp"
+                        <img class="imagemFrotaSevenair" src="../img/companhias/frota/skydiving-algarve-pilatus.webp"
                             alt="Pilatus PC6 (Imagem do site oficial)">
                     </td>
                     <td class="td-cont">
@@ -158,13 +158,13 @@
                             dete modelo.</p>
                     </td>
                     <td>
-                        <img class="imagemfrota" src="../img/companhias/frota/cessna-sevenair-172.webp"
+                        <img class="imagemFrotaSevenair" src="../img/companhias/frota/cessna-sevenair-172.webp"
                             alt="Pilatus PC6 (Imagem do site oficial)">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img class="imagemfrota" src="../img/companhias/frota/Sevenair_chieftain.webp"
+                        <img class="imagemFrotaSevenair" src="../img/companhias/frota/Sevenair_chieftain.webp"
                             alt="Piper PA31 Chieftain (Imagem do site oficial)">
                     </td>
                     <td class="td-cont">
@@ -187,7 +187,8 @@
                         </p>
                     </td>
                     <td>
-                        <img class="imagemfrota" src="../img/companhias/frota/sevenair-extra-300-aerobatic-1.webp"
+                        <img class="imagemFrotaSevenair"
+                            src="../img/companhias/frota/sevenair-extra-300-aerobatic-1.webp"
                             alt="Extra 300 (Imagem do site oficial)">
                     </td>
                 </tr>
@@ -195,18 +196,8 @@
             <br>
         </a>
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
+    <br>
+    <!--
     <main>
         <a class="glosario" name="aircraft">
             <h2>Aircraft</h2>
@@ -215,7 +206,7 @@
                 impulso para baixo dos propulsores.</p>
         </a>
     </main>
-    <br>
+    <br>-->
 </body>
 
 </html>
