--- a/loja.html
+++ b/loja.html
@@ -40,7 +40,7 @@
             {
                 id: 0,
                 nome: 'camiseta',
-                img: 'img/loja/sweatbranca_item.png',
+                img: 'img/loja/sweat branca.png',
                 quantidade: 0
             },
             {
